# triptych-detector-frame

./: .pdm-python  README.md  frames.py  main.py  pyproject.toml
