[project]
name = "triptych-detector-frame"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pikamonvvs", email = "pikamonvvs@naver.com"},
]
dependencies = [
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.18.0",
    "opencv-contrib-python>=4.11.0.86",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
